<resources>
    <string name="app_name">纯记账</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">用户名</string>
    <string name="nav_header_subtitle">邮箱</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>

    <string name="menu_home">首页</string>
    <string name="menu_history">历史查看</string>
    <string name="menu_analysis">分析统计</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food">吃喝饮食</string>
    <string name="entertainment">影视娱乐</string>
    <string name="clothes">日常用品</string>
    <string name="pets">宠物花销</string>
    <string name="houserent">房租水电</string>
    <string name="medicine">医疗费用</string>
    <string name="shopping">逛街购物</string>
    <string name="traffic">交通出行</string>
    <string name="tour">旅游度假</string>
    <string name="study">学习用品</string>
    <string name="salary">工资薪水</string>
    <string name="winning">奖品奖金</string>
    <string name="investment">投资理财</string>
    <string name="business">经费津贴</string>
    <string name="others">其他</string>
    <string name="title_activity_show_item">ShowItemActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>