<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.item.AddExpendItemFragment">

    <LinearLayout
        android:id="@+id/linear_layout_add_income_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="21dp"
        android:layout_marginHorizontal="32dp"
        android:paddingVertical="12dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_add_income_item_reason"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingVertical="15dp"
            android:text="TextView"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_add_income_item_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="number"
            android:paddingVertical="15dp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_add_expend_item_food"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/icon_food"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_add_income_item" />

    <ImageButton
        android:id="@+id/btn_add_expend_item_entertainment"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/icon_entertainment"
        app:layout_constraintLeft_toRightOf="@id/btn_add_expend_item_food"
        app:layout_constraintRight_toLeftOf="@id/btn_add_expend_item_clothes"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_add_income_item" />

    <ImageButton
        android:id="@+id/btn_add_expend_item_clothes"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/icon_clothes"
        app:layout_constraintLeft_toRightOf="@id/btn_add_expend_item_entertainment"
        app:layout_constraintRight_toLeftOf="@id/btn_add_expend_item_pet"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_add_income_item" />

    <ImageButton
        android:id="@+id/btn_add_expend_item_pet"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/icon_makeup"
        app:layout_constraintLeft_toRightOf="@id/btn_add_expend_item_clothes"
        app:layout_constraintRight_toLeftOf="@id/btn_add_expend_item_houserent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_add_income_item" />

    <ImageButton
        android:id="@+id/btn_add_expend_item_houserent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/icon_houserent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_add_income_item" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:paddingVertical="5dp"
        android:text="@string/food"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_expend_item_food" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/entertainment"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/textView2"
        app:layout_constraintRight_toLeftOf="@id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_expend_item_entertainment" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/clothes"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/textView3"
        app:layout_constraintRight_toLeftOf="@id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_expend_item_clothes" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/pets"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/textView4"
        app:layout_constraintRight_toLeftOf="@id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_expend_item_pet" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:paddingVertical="5dp"
        android:text="@string/houserent"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_expend_item_houserent" />

    <ImageButton
        android:id="@+id/btn_add_expend_item_medicine"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/icon_medicine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/btn_add_expend_item_shopping"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/icon_shopping"
        app:layout_constraintLeft_toRightOf="@id/btn_add_expend_item_medicine"
        app:layout_constraintRight_toLeftOf="@id/btn_add_expend_item_traffic"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageButton
        android:id="@+id/btn_add_expend_item_traffic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/icon_traffic"
        app:layout_constraintLeft_toRightOf="@id/btn_add_expend_item_shopping"
        app:layout_constraintRight_toLeftOf="@id/btn_add_expend_item_tour"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/btn_add_expend_item_tour"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/icon_tour"
        app:layout_constraintLeft_toRightOf="@id/btn_add_expend_item_traffic"
        app:layout_constraintRight_toLeftOf="@id/btn_add_expend_item_study"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/btn_add_expend_item_study"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/icon_study"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:paddingVertical="5dp"
        android:text="@string/medicine"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add_expend_item_medicine" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/shopping"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/textView7"
        app:layout_constraintRight_toLeftOf="@id/textView9"
        app:layout_constraintTop_toBottomOf="@id/btn_add_expend_item_shopping" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/traffic"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/textView8"
        app:layout_constraintRight_toLeftOf="@id/textView10"
        app:layout_constraintTop_toBottomOf="@id/btn_add_expend_item_traffic" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/tour"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/textView9"
        app:layout_constraintRight_toLeftOf="@id/textView11"
        app:layout_constraintTop_toBottomOf="@id/btn_add_expend_item_tour" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:paddingVertical="5dp"
        android:text="@string/study"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add_expend_item_study" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="保存"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toBottomOf="@id/btn_add_expend_item_traffic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_cancel"/>
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="取消"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toBottomOf="@id/btn_add_expend_item_traffic"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_ok"/>


</androidx.constraintlayout.widget.ConstraintLayout>
